--- a/templates/perfil-profe.html
+++ b/templates/perfil-profe.html
@@ -84,6 +84,23 @@
                   </div>
                 </div>
 
+                  <div class="col-md-12"></div>
+
+                <div class="col-ms-12 form-group">
+                  <div class ="col-md-1">
+                    <label for="exampleInputnomre"><h4>Profesión:</h4></label>
+                  </div>
+                  <div class ="col-md-5">
+                    <input type = "text" name="profesion" class="form-control" value="{{ usuario.profesion }}" placeholder="Profesion">
+                  </div>
+                  <div class ="col-md-3">
+                    <label for="exampleInputnomre"><h4>Especialidad:</h4></label>
+                  </div>
+                  <div class ="col-md-3">
+                      <input type = "text" name="especialidad" class="form-control" value="{{ usuario.especialidad }}" placeholder="Especialidad">
+                  </div>
+                </div>
+
                 <div class="col-md-12"></div>
 
                   <div class="col-md-9" style="text-align:right">
