--- a/templates/perfil-estudiante.html
+++ b/templates/perfil-estudiante.html
@@ -30,6 +30,9 @@
             <label>Apellido </label><label class="form-control"> {{ usuario.id.last_name }} </label>
             <label>Correo </label><input  type="email" class="form-control" name="email"  value="{{ usuario.id.email }}" >
             <label>Documento Identidad </label><input  type="documento" class="form-control" name="documento"  value="{{ usuario.documento }}" >
+            <label>Teléfono </label><input  type="tel" class="form-control" name="tel"  value="{{ usuario.tel }}" >
+            <label>Dirección de Residencia </label><input  type="direccion" class="form-control" name="direccion"  value="{{ usuario.direccion }}" >
+            <label>Fecha de Nacimiento </label><input  type="date" class="form-control" name="nacimiento"  data-date-format="YYYY-MM-DD" value="{{ usuario.fecha_nacimiento }}" >
                 <br />
 
 
