--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -8,7 +8,7 @@
     <title>{% block title %} {% endblock %}</title>
 
     <link href="../static/css/style-modulo.css" rel="stylesheet">
-    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.css" rel="stylesheet">
 
 </head>
 
@@ -65,6 +65,8 @@
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="../static/javascript/jquery.min.js"></script>
+    <script src="../static/vendors/bootstrap-3.3.6/js/modal.js"></script>
+    <script src="../static/vendors/bootstrap-3.3.6/js/transition.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="../static/vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js">
 </script>
