--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -16,6 +16,8 @@
     <script src="/static/javascript/js_var.js"></script>
     <script src="../static/javascript/tinyeditor.js"></script>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -89,7 +91,7 @@
                         <a href="{% url 'registro-estudiante' %}"><i class="fa fa-fw fa-edit"></i> Registro Estudiantes</a>
                     </li>
                     <li>
-                        <a href="{% url 'eliminar-estudiante' %}"><i class="fa fa-fw fa-cut"></i> Eliminar Estudiantes</a>
+                        <a href="{% url 'eliminar-estudiante' %}"><i class="fa fa-fw fa-trash"></i> Eliminar Estudiantes</a>
                     </li>
 
                     <li>
