--- a/templates/footer-prof.html
+++ b/templates/footer-prof.html
@@ -1,10 +1,33 @@
-<!-- FOOTER -->
-	<div id="">
-		<div class="container">
+ <!-- Footer -->
+    <footer>
+        <hr>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <ul class="list-inline text-center">
+                        <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-tablet fa-stack-2x"></i>
+                                    <i class="fa fa-twitter fa-stack-1x "></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                             <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-tablet fa-stack-2x"></i>
+                                    <i class="fa fa-facebook fa-stack-1x "></i>
+                                </span>
+                            </a>
+                        </li>
 
-			<div class="col-md-6 text-left copy">
-						<p>Copyright &copy; All Rights Reserved.</p>
-					</div>
+                    </ul>
+                    <p class="copyright text-muted text-center"> &copy;2016 Escuela Normal Superior Maria Auxiliadora </p>
 
-	    </div><!-- Footer -->
-    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
