--- a/templates/modulo1-unidad1-lesson2-tm1.html
+++ b/templates/modulo1-unidad1-lesson2-tm1.html
@@ -29,7 +29,10 @@
       <h3></h3>
         <hr>
       <p>Listen to four students talking and match them to the ID cards A–D.</p>
-      <p>Audio 6.</p>
+          <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK01.mp3" type="audio/mpeg">
+            Your browser does not support the audio element. audio 7
+          </audio>
 
       <br />
       <div class="centered">
@@ -57,7 +60,11 @@
     </thead>
     <tbody>
       <tr>
-          <td><b>Listen and repeat (audio 8)</b>
+          <td><b>Listen and repeat </b>
+              <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK02.mp3" type="audio/mpeg">
+            Your browser does not support the audio element. audio 8
+          </audio>
               <p>Learn the vowels first. Listen and repeat.</p>
                <p>a e i o u</p></td>
       </tr>
