--- a/templates/modulo1-unidad1-lesson2-tm1.html
+++ b/templates/modulo1-unidad1-lesson2-tm1.html
@@ -63,7 +63,7 @@
           <td><b>Listen and repeat </b>
               <audio controls>
           <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK02.mp3" type="audio/mpeg">
-            Your browser does not support the audio element. audio 8
+            Your browser does not support the audio element. audio 8 z
           </audio>
               <p>Learn the vowels first. Listen and repeat.</p>
                <p>a e i o u</p></td>
