--- a/templates/login-profe.html
+++ b/templates/login-profe.html
@@ -49,15 +49,13 @@ $(document).ready(function() {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">INGLES <i class="fa fa-circle"></i></a>
+          <a class="navbar-brand" href="{% url 'index' %}">ENGLISH EASY <i class="fa fa-circle"></i></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{% url 'index' %}">INICIO</a></li>
             <li><a href="{% url 'curso' %}">CURSO</a></li>
-            <li><a href="#">CONTACTO</a></li>
-            <li><a href="#">...</a></li>
-            <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
+            <li><a href="{% url 'contacto' %}">CONTACTO</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
