--- a/templates/inicio-estudiante.html
+++ b/templates/inicio-estudiante.html
@@ -14,7 +14,7 @@
         <div class="panel panel-info">
   <div class="panel-heading">Modulo 1</div>
   <div class="panel-body">
-    <p>Bienvenido al primer modulo de <strong>English Easy</strong>, aquí encontrará todos los temas y actividades para repasar del libro <strong>English Please!</strong></p>
+    <p>Bienvenido al primer modulo de <strong>Easy English </strong>, aquí encontrará todos los temas y actividades para repasar del libro <strong>English Please!</strong></p>
       <p></p>
   </div>
 </div>
