--- a/templates/login-estudiante.html
+++ b/templates/login-estudiante.html
@@ -49,12 +49,12 @@ $(document).ready(function() {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">ENGLISH EASY <i class="fa fa-circle"></i></a>
+          <a class="navbar-brand" href="{% url 'index' %}">EASY ENGLISH<i class="fa fa-circle"></i></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{% url 'index' %}">INICIO</a></li>
-            <li><a href="{% url 'curso' %}">CURSO</a></li>
+            <li><a href="{% url 'curso' %}">INSTITUCIÓN</a></li>
             <li><a href="#">CONTACTO</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -139,7 +139,7 @@ Para mayor información comuniquese al: (1) 000 29 00
 						<ul id="downMenu">
                             
 							<li class="active"><a href="{% url 'index' %}">Inicio</a></li>
-							<li><a href="{% url 'curso' %}">Curso</a></li>
+							<li><a href="{% url 'curso' %}">Institución</a></li>
 							<li><a href="{% url 'contacto' %}">Contacto</a></li>
 						</ul>
 					</div>
