--- a/templates/modulo1-unidad1-lesson1-tm2.html
+++ b/templates/modulo1-unidad1-lesson1-tm2.html
@@ -29,6 +29,10 @@
       <h3></h3>
         <hr>
       <p>Listen and read the dialogues A-D. Match them to pictures 1-4</p>
+      <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK01.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
       <div class="centered"><img src="../static/img/modulo1/unity1/read-1.PNG" class="img-responsive" alt=""/></div>
 
       <br />
@@ -71,6 +75,10 @@
     <tbody>
       <tr>
           <td><b>Listen and repeat the words</b>
+              <audio controls>
+              <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK02.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+              </audio>
               <p>Hi! Hello! How are you?</p></td>
       </tr>
       <tr>
@@ -86,6 +94,10 @@
       <h3></h3>
         <hr>
         <p>Listen and repeat these sentences.</p>
+        <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK03.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
         <ul>
             <li>a. Hi! How are you?</li>
             <li>b. Hello! My name is Helen.</li>
