--- a/templates/modulo1-unidad1-lesson2-tm1.html
+++ b/templates/modulo1-unidad1-lesson2-tm1.html
@@ -30,8 +30,8 @@
         <hr>
       <p>Listen to four students talking and match them to the ID cards A–D.</p>
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK01.mp3" type="audio/mpeg">
-            Your browser does not support the audio element. audio 7
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK06.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
           </audio>
 
       <br />
@@ -44,7 +44,10 @@
         <hr>
       <div class="col-sm-6 col-md-6">
         <p>Listen and repeat.</p>
-          <p>audio 7</p>
+          <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK07.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
           <br/>
           <p>The alphabet</p>
           <p><b>A B C D E F G H I J K L M N</b></p>
@@ -62,8 +65,8 @@
       <tr>
           <td><b>Listen and repeat </b>
               <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK02.mp3" type="audio/mpeg">
-            Your browser does not support the audio element. audio 8
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK08.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
           </audio>
               <p>Learn the vowels first. Listen and repeat.</p>
                <p>a e i o u</p></td>
@@ -86,7 +89,10 @@
       <div class="col-sm-12 col-md-12">
       <br />
       <p>Listen and choose the name you hear.</p>
-          <p>audio 9.</p>
+          <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK09.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
       <br />
       <div class="col-sm-4 col-md-4">
             <p>1. A. Sara</p>
@@ -114,7 +120,10 @@
       <div class="col-sm-12 col-md-12">
       <br />
        <p>Listen and write the names of students 1–3 in your notebook.</p>
-          <p>audio 10.</p>
+          <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK10.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
           <br/>
       <div class="centered">
           <img src="../static/img/modulo1/unity1/listen-2-1.PNG" class="img-responsive" alt=""/>
