--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Admin <i class="fa fa-leaf"></i> English Easy</a>
+                <a class="navbar-brand" href="#">Admin <i class="fa fa-leaf"></i>Easy English</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
