--- a/templates/plantilla3.html
+++ b/templates/plantilla3.html
@@ -31,7 +31,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 2<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson2-tm1' %}">Listen</a></li>
-                <li><a href="#">...</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson2-tm2' %}">Vocabulary</a></li>
                 <li><a href="#">...</a></li>
                 <li><a href="#">...</a></li>
                 <li class="divider"></li>
