--- a/templates/inicio-profe.html
+++ b/templates/inicio-profe.html
@@ -26,7 +26,7 @@
                     <div class="panel panel-info">
                       <div class="panel-heading">Panel de Administración</div>
                       <div class="panel-body">
-                        <p>Bienvenido profesor <strong>{{ usuario.id.first_name }} {{ usuario.id.last_name }}</strong>, Este es el  panel de administración de <strong>English Easy</strong>, aquí podrá registrar nuevos estudiantes, ingresar notas parciales y generar reportes!</p>
+                        <p>Bienvenido profesor <strong>{{ usuario.id.first_name }} {{ usuario.id.last_name }}</strong>, Este es el  panel de administración de <strong>Easy English</strong>, aquí podrá registrar nuevos estudiantes, ingresar notas parciales y generar reportes!</p>
                           <p></p>
                       </div>
                     </div>
