--- a/templates/modulo1-unidad1-lesson1-tm3.html
+++ b/templates/modulo1-unidad1-lesson1-tm3.html
@@ -29,6 +29,10 @@
       <h3></h3>
         <hr>
       <p>Listen and choose the correct response, A, B, or C.</p>
+        <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK04.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+         </audio>
 
       <br />
       <div class="col-sm-4 col-md-4">
@@ -79,6 +83,10 @@
       <br /></div>
 
       <p>Now listen and check your answers</p>
+        <audio controls>
+          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK05.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
 
       <div class="col-sm-12 col-md-12">
       <br />
