--- a/templates/plantilla1.html
+++ b/templates/plantilla1.html
@@ -25,12 +25,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">ENGLISH EASY</a>
+          <a class="navbar-brand" href="{% url 'index' %}">EASY ENGLISH </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="{% url 'index' %}">INICIO</a></li>
-            <li><a href="{% url 'curso' %}">CURSO</a></li>
+            <li><a href="{% url 'curso' %}">INSTITUCIÓN</a></li>
             <li><a href="{% url 'contacto' %}"><i class="fa fa-envelope-o"></i> CONTACTO</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -71,7 +71,7 @@ Para mayor información comuniquese al: (1) 000 29 00
 						<ul id="downMenu">
 
 							<li class="active"><a href="{% url 'index' %}">Inicio</a></li>
-							<li><a href="{% url 'curso' %}">Curso</a></li>
+							<li><a href="{% url 'curso' %}">Institución</a></li>
 							<li><a href="{% url 'contacto' %}">Contacto</a></li>
 						</ul>
 					</div>
