--- a/templates/eliminar-estudiante.html
+++ b/templates/eliminar-estudiante.html
@@ -10,7 +10,7 @@
     <h3 id="myModalLabel">Eliminar Estudiante</h3>
     </div>
     <div class="modal-body">
-    <p>¿Realmente desea eliminar al estudiante <span id="modal_name">{{ estudiante.id.first_name }}</span>?</p>
+    <p>¿Realmente desea eliminar al estudiante <span id="modal_name" value="modal_name"> </span>?</p>
     </div>
     <div class="modal-footer">
         <form method="post" id="frmEliminar">
