--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -115,7 +115,7 @@
 <!-- jQuery -->
     <script src="../static/javascript/jquery.js"></script>
     <script src="../static/javascript/jquery.form.min.js"></script>
-    <!-- <script src="../static/javascript/js_var.js"></script> -->
+    <script src="../static/javascript/js_var.js"></script>
     <script src="../static/javascript/tinyeditor.js"></script>
 
     <script src="../static/vendors/bootstrap-3.3.6/js/transition.js"></script>
