--- a/templates/eliminar-estudiante.html
+++ b/templates/eliminar-estudiante.html
@@ -3,23 +3,6 @@
 
 {%  block content %}
 
-    <!--IniciaModal-->
- <div id="myModal" class="modal fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
- <div class="modal-dialog modal-content">
-    <div class="modal-header">
-    <h3 id="myModalLabel">Eliminar Estudiante</h3>
-    </div>
-    <div class="modal-body">
-    <p>¿Realmente desea eliminar al estudiante <span>{{ estudiante.id.first_name }}</span>?</p>
-    </div>
-    <div class="modal-footer">
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancelar</a>
-        <button onclick="eliminarIdentificador('{{ estudiante.id.id }}')" class="modal-action modal-close waves-effect waves-green btn-flat">Eliminar</a>
-    </div>
- </div>
-</div>
-<!--EndModal-->
-
   <div id="page-wrapper">
 
             <div class="container-fluid">
@@ -107,16 +90,16 @@
 
             <div class="col-md-12"></div>
 
-            <div class="col-md-5">
-                <tr id="tr{{estudiante.id.id}}">
-                <td><a href="#myModal" role="button" class="btn btn-danger delete" data-toggle="modal" id="{{estudiante.id.id}}"><i class="fa fa-fw fa-trash"></i>Eliminar</a></td>
-                </tr>
-            </div>
-
           </div>
         </div>
       </div>
     </form>
+
+    <div class="col-md-5">
+        <tr id="tr{{estudiante.id.id}}">
+        <td><a href="{% url 'eliminar-estudiante' pk=estudiante.id.id %}" role="button" class="btn btn-danger delete" id="pk"><i class="fa fa-fw fa-trash"></i>Eliminar</a></td>
+        </tr>
+    </div>
     
   </div>
 
