--- a/templates/plantilla3.html
+++ b/templates/plantilla3.html
@@ -32,68 +32,68 @@
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson2-tm1' %}">Listen</a></li>
                 <li><a href="{% url 'modulo1-unidad1-lesson2-tm2' %}">Vocabulary</a></li>
-                <li><a href="#">...</a></li>
-                <li><a href="#">...</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson2-tm3' %}">Read</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson2-tm4' %}">Write</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 3 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">... </a></li>
-                <li><a href="#">... </a></li>
-                <li><a href="#">...</a></li>
-                <li><a href="#">...</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson3-tm1' %}">Listen </a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson3-tm2' %}">Vocabulary </a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson3-tm3' %}">Languaje</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson3-tm4' %}">Write</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 4 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Possessive adjectives </a></li>
-                <li><a href="#">Family members Numbers 20-100 </a></li>
-                <li><a href="#">Identifying numbers Stress on numbers</a></li>
-                <li><a href="#">Description of pictures</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson4-tm1' %}">Vocabulary </a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson4-tm2' %}">Listen </a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson4-tm3' %}">Read</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson4-tm4' %}">Speak</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 5 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Possessive ’s </a></li>
-      			<li><a href="#">Personality adjectives </a></li>
-      			<li><a href="#">People talking about their families Possessive ’s</a></li>
-      			<li><a href="#">Describing a family tree</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson5-tm1' %}">Listen </a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm2' %}">Languaje </a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm3' %}">Read</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm4' %}">Vocabulary</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 6 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">to be: questions </a></li>
-      			<li><a href="#">Jobs </a></li>
-      			<li><a href="#">Information to complete a form Intonation in questions</a></li>
-      			<li><a href="#">An email describing a family photo</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson6-tm1' %}">Vocabulary </a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm2' %}">Read</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm3' %}">Languaje</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm4' %}">Speak</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 7 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">a and an this/these and that/those</a></li>
-      			<li><a href="#">Sports, subjects andclassroom objects Days of the week</a></li>
-      			<li><a href="#">Discussing schoolsubjects</a></li>
-      			<li><a href="#">A letter</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson7-tm1' %}">Vocabulary</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm2' %}">Languaje</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm3' %}">Listen</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm4' %}">Speak</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 8 <b class="caret"></b></a>
                <ul class="dropdown-menu">
-                <li><a href="#">Wh- questionswith to be </a></li>
-      			<li><a href="#">Adjectives describing physical appearance</a></li>
-     			<li><a href="#">Discussing physical characteristics Intonation in questions</a></li>
-     			<li><a href="#">Descriptions of people</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson8-tm1' %}">Vocabulary </a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson8-tm2' %}">Listen</a></li>
+     			<li><a href="{% url 'modulo1-unidad1-lesson8-tm3' %}">Languaje</a></li>
+     			<li><a href="{% url 'modulo1-unidad1-lesson8-tm4' %}">Read</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
