--- a/templates/eliminar-estudiante.html
+++ b/templates/eliminar-estudiante.html
@@ -97,7 +97,7 @@
 
     <div class="col-md-5">
         <tr id="tr{{estudiante.id.id}}">
-        <td><a href="{% url 'eliminar-estudiante' pk=estudiante.id.id %}" role="button" class="btn btn-danger delete" id="pk"><i class="fa fa-fw fa-trash"></i>Eliminar</a></td>
+        <td><a href="#" role="button" class="btn btn-danger delete" id="pk"><i class="fa fa-fw fa-trash"></i>Eliminar</a></td>
         </tr>
     </div>
     
