--- a/templates/plantilla1.html
+++ b/templates/plantilla1.html
@@ -9,8 +9,10 @@
 
 
     <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style-general.css" rel="stylesheet">
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
 
 </head>
 
