--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -121,6 +121,8 @@
 
 {% include 'footer-prof.html' %}
 
+{% block javascript %}
+{% endblock %}
 <!-- jQuery -->
     <script src="../static/javascript/jquery.js"></script>
     <script src="../static/javascript/jquery.form.min.js"></script>
