--- a/static/css/style-modulo.css
+++ b/static/css/style-modulo.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,900);
 
 body {
-    background: url(../img/bgmod.jpg) repeat;
+    background: url(../img/bgm.png) repeat;
     font-family: "Lato";
     font-weight: 300;
     font-size: 16px;
@@ -395,4 +395,17 @@ hr {
 .dropdown-submenu.pull-left > .dropdown-menu {
   left: -100%;
   margin-left: 10px;
+}
+
+
+audio::-internal-media-controls-download-button {
+    display:none;
+}
+
+audio::-webkit-media-controls-enclosure {
+    overflow:hidden;
+}
+
+audio::-webkit-media-controls-panel {
+    width: calc(100% + 30px); /* Adjust as needed */
 }
