--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson1-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson1-tm2.html
@@ -8,18 +8,6 @@
   <li>Modulo 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
         <li class="active">Lesson 1</li>
-        
-        <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-            </form>
-        </div>        
-        
 </ol>
 
         {% include 'plantilla3.html' %}
@@ -29,10 +17,9 @@
       <h3></h3>
         <hr>
       <p>Listen and read the dialogues A-D. Match them to pictures 1-4</p>
-      <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK01.mp3" type="audio/mpeg">
+      <audio controls="controls" src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK01.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
-          </audio>
+      </audio>
       <div class="centered"><img src="../static/img/modulo1/unity1/read-1.PNG" class="img-responsive" alt=""/></div>
 
       <br />
@@ -110,5 +97,6 @@
     </div><!--div-->
 </div>
           </div>
+</div>
 
 {% endblock %}
