--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm4.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm4.html
@@ -1,4 +1,4 @@
-<{% extends 'plantilla2.html' %}
+{% extends 'plantilla2.html' %}
 {% block title %} Lesson 2 - Listen {% endblock %}
 
 {%  block content %}
@@ -8,18 +8,7 @@
   <li>Modulo 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
         <li class="active">Lesson 2</li>
-        
-        <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-            </form>
-        </div>        
-        
+              
 </ol>
     
     
@@ -160,5 +149,5 @@
 
        </div>
     </div><!--div-->
-
+</div>
 {% endblock %}
