--- a/templates/contenidos/unidad1/modulo1-unidad1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1.html
@@ -7,18 +7,7 @@
     <ol class="breadcrumb">
   <li>Modulo 1</li>
         <li class="active">Unidad 1</li>
-        
-        <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-            </form>
-        </div>        
-        
+              
 </ol>
 
     {% include 'plantilla3.html' %}
@@ -42,7 +31,7 @@
     </thead>
     <tbody>
       <tr>
-          <td><b>Lesson 1</b> <p></p></td>
+          <td><b><a href="{% url 'modulo1-unidad1-lesson1-tm2' %}">Lesson 1</a></b> <p></p></td>
 
           <td><p>Greetings</p></td>
 
@@ -53,7 +42,7 @@
 
       </tr>
       <tr>
-        <td><b>Lesson 2</b> <p></p></td>
+        <td><b><a href="{% url 'modulo1-unidad1-lesson2-tm2' %}">Lesson 2</a></b> <p></p></td>
           <td><p>Alphabet</p>
               <p>Numbers 1–20</p>
               <p>Personal information</p></td>
@@ -65,7 +54,7 @@
       </tr>
 
         <tr>
-            <td><b>Lesson 3</b> <p></p></td>
+            <td><b><a href="{% url 'modulo1-unidad1-lesson3-tm2' %}">Lesson 3</a></b> <p></p></td>
               <td><p>Countries and nationalities</p>
                   <p>Colours</p></td>
 
