--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -34,15 +34,22 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTENIDOS <span class="caret"></span></a>
               <ul class="dropdown-menu multi-level" role="menu">
-              blablablas
                 <li class="dropdown-submenu">
-                        <a tabindex="-1" href="{% url 'modulo1' %}">Modulo 1 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a tabindex="-1" href="{% url 'modulo1-unidad1' %}">Unidad 1 - This is me!</a></li>
-                            <li><a href="#">Unidad 2 -  My family</a></li>
-                            <li><a href="#">Unidad 3 - School life and people</a></li>
-                        </ul>
-            </li>
+                  <a tabindex="-1" href="{% url 'modulo1' %}">Modulo 1 <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                      <li><a tabindex="-1" href="{% url 'modulo1-unidad1' %}">Unidad 1 - This is me!</a></li>
+                      <li><a href="{% url 'modulo1-unidad2' %}">Unidad 2 -  My family</a></li>
+                      <li><a href="{% url 'modulo1-unidad3' %}">Unidad 3 - School life and people</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown-submenu">
+                  <a tabindex="-1" href="{% url 'modulo1' %}">Modulo 2 <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                      <li><a tabindex="-1" href="#">Unidad 1 - This is me!</a></li>
+                      <li><a href="#">Unidad 2 -  My family</a></li>
+                      <li><a href="#">Unidad 3 - School life and people</a></li>
+                  </ul>
+                </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Temario</li>
                 <li><a href="#">Multimedia</a></li>
