--- a/templates/paginaEstudiante/inicio-estudiante.html
+++ b/templates/paginaEstudiante/inicio-estudiante.html
@@ -3,7 +3,7 @@
 
 {%  block content %}
 
-    <div class="container initial">
+    <div class="container initial" style="margin-bottom: 315px;">
     <ol class="breadcrumb">
   <li class="active"><a href="{% url 'inicio-estudiante' %}">Inicio</a></li>
         <li> {{ usuario.id.first_name }} {{ usuario.id.last_name }} </li>
@@ -80,5 +80,5 @@
           </div>
 
     </div> <!-- /container initial-->    
-
+</div> </div>  </div> </div> 
 {% endblock %}
