--- a/templates/contenidos/unidad1/modulo1.html
+++ b/templates/contenidos/unidad1/modulo1.html
@@ -17,7 +17,7 @@
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
 				<h1>MODULE<b> ONE</b></h1>
-				<h2>Your Wold!</h2>
+				<h2>Your World!</h2>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
