--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -9,7 +9,8 @@
 
     <link href="../static/css/style-modulo.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../static/css/style-ahorcado.css">
-    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap-mod.css" rel="stylesheet">
+    <link href="../static/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
     
 
 
