--- a/templates/plantilla1.html
+++ b/templates/plantilla1.html
@@ -31,9 +31,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="{% url 'index' %}">INICIO</a></li>
-            <li><a href="{% url 'curso' %}">INSTITUCIÓN</a></li>
-            <li><a href="{% url 'contacto' %}"><i class="fa fa-envelope-o"></i> CONTACTO</a></li>
+            <li class="active"><a href="{% url 'index' %}">HOME</a></li>
+            <li><a href="{% url 'curso' %}">INSTITUTION</a></li>
+            <li><a href="{% url 'contacto' %}"><i class="fa fa-envelope-o"></i> CONTACT</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -51,8 +51,9 @@
 		<div class="container">
 			<div class="row centered">
                 <div class="col-md-3">
-                    <p>Escuela Normal Superior Girardot Carrera 9 No. 45A - 44 <br />
-Para mayor información comuniquese al: (1) 000 29 00
+                    <p>Escuela Normal Superior María Auxiliadora of Girardot <br />
+                    Kilometro 3, Barrio El Diamante<br />
+                    Para mayor información comuniquese al: (1) 000 29 00
                 </p></div>
                 <div class="col-sm-3 col-md-3 pull-right">
                     <div class="centered"><img src="../static/img/Escudo.png" class="img-responsive" alt=""/></div></div>
@@ -66,15 +67,15 @@ Para mayor información comuniquese al: (1) 000 29 00
 			<div class="container">
 				<div class="row downLine">
 					<div class="col-md-6 text-left copy">
-						<p>Copyright &copy; Escuela Normal Superior Girardot.</p>
+						<p>Copyright &copy; Escuela Normal Superior María Auxiliadora of Girardot.</p>
 					</div>
 					<div class="col-md-6 text-right dm">
 
 						<ul id="downMenu">
 
-							<li class="active"><a href="{% url 'index' %}">Inicio</a></li>
-							<li><a href="{% url 'curso' %}">Institución</a></li>
-							<li><a href="{% url 'contacto' %}">Contacto</a></li>
+							<li class="active"><a href="{% url 'index' %}">Home</a></li>
+							<li><a href="{% url 'curso' %}">Institution</a></li>
+							<li><a href="{% url 'contacto' %}">Contact</a></li>
 						</ul>
 					</div>
 				</div>
