--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h1>Tu lugar para aprender <b>ingles</b></h1>
-				<h2>De forma sencilla</h2>
+				<h1>Welcome to the website <b>Easy English</b></h1>
+				<h2>Practice your english!</h2>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -18,14 +18,14 @@
 <div id="lg">
 	<div class="container wb">
 		<div class="row centered">
-			<div class="col-lg-8">
-				<h4>El Curso</h4>
-				<p>By being true to the brand we represent, we elevate the audiences’ relationship to it. Like becomes love becomes a passion. Passion becomes advocacy. And we see the brand blossom from within, creating a whole story the audience embraces. That’s when the brand can truly flex its muscles.</p>
+			<div class="col-lg-8 col-sm-7">
+				<h4>English for 9º Grade</h4>
+				<p>Easy English is a website where you can practice the themes of the book "English Please" contributed by the Ministry of National Education, through the program "Colombia Bilingüe", for the Escuela Normal Superior María Auxiliadora of Girardot. </p>
                 
-                <a class="btn btn-primary btn-lg" href="{% url 'curso' %}">Ver Contenidos</a>
+                <a class="btn btn-primary btn-lg" href="{% url 'curso' %}">More...</a>
                   
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-4 col-sm-3">
 				<img class="img-responsive" src="/static/img/Cursos-de-inglés.png" alt="">
 			</div>
 		</div><!-- row -->
@@ -35,18 +35,18 @@
      <div id="wh">
 		<div class="container wb">
 			<div class="row centered">
-				<h4>¿ Qué tipo de Usuario eres ?</h4>
+				<h4>¿ What type of user are you ?</h4>
                 <hr />
                 <br />
-				<div class="col-lg-6">
+				<div class="col-lg-6 col-sm-5">
 					<a href="{% url 'login-estudiante' %}"><img src="/static/img/icon-estudiante.png" alt=""></a>
                     <br /><br />
-                    <p>Estudiante</p>
+                    <p>Student</p>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-6 col-sm-5">
 					<a href="{% url 'login-profesor' %}"><img src="/static/img/icon-docente.png" alt=""></a>
                     <br /><br />
-                    <p>Docente</p>
+                    <p>Teacher</p>
 				</div>
                 
 			</div><!-- row -->
@@ -57,9 +57,9 @@
 	<div id="dg">
 		<div class="container">
 			<div class="row centered">
-				<h4>DONDE ESTAMOS.</h4>
+				<h4>OUR LOCATION.</h4>
 				<br>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31828.409870712367!2d-74.81110623345106!3d4.306943156655903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f28ec54308e5f%3A0xad9e09275aa20260!2sGirardot%2C+Cundinamarca!5e0!3m2!1ses-419!2sco!4v1457666339953" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1578.8748488459253!2d-74.80177399417268!3d4.313800960374414!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd5564965f2912447!2sEscuela+Normal+Superior+Mar%C3%ADa+Auxiliadora!5e0!3m2!1sen!2sco!4v1484856617440" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -68,22 +68,22 @@
     <div class="container w">
 		<div class="row centered">
 			<br><br>
-			<div class="col-lg-4">
+			<div class="col-lg-4 col-sm-3">
 				<i class="fa fa-phone"></i>
-				<h4>Números de Teléfono</h4>
+				<h4>CONTACT</h4>
 				<p>830 6287.</p>
 			</div><!-- col-lg-4 -->
 
-			<div class="col-lg-4">
+			<div class="col-lg-4 col-sm-3">
 				<i class="fa fa-map-marker"></i>
-				<h4>DONDE ESTAMOS.</h4>
+				<h4>OUR ADDRESS</h4>
 <p>Kilometro 3, Barrio El Diamante, Girardot</p>
 				
 			</div><!-- col-lg-4 -->
 
-			<div class="col-lg-4">
+			<div class="col-lg-4 col-sm-3">
 				<i class="fa fa-desktop"></i>
-				<h4>Página Oficial</h4>
+				<h4>Oficial Page</h4>
 				<p>http://www.ensmagirardot.edu.co</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
