--- a/static/css/style-login.css
+++ b/static/css/style-login.css
@@ -142,7 +142,7 @@ FOOTER
 *******************/
 
 .login-form .footer {
-	padding: 25px 30px 40px 30px;
+	padding: 5px 30px 40px 30px;
 	overflow: auto;
 	
 	background: #d4dedf;
@@ -155,12 +155,14 @@ FOOTER
 
 /* Login button */
 .login-form .footer .button {
-	float:right;
-	padding: 11px 25px;
+/*	float:right;*/
+	padding-bottom: 35px;
+    width: 100%;
+/*	padding: 11px 25px;*/
 	
 	font-family: 'Bree Serif', serif;
 	font-weight: 300;
-	font-size: 18px;
+	font-size: 23px;
 	color: #fff;
 	text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
 	
@@ -172,6 +174,8 @@ FOOTER
 	box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
 	-moz-box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
 	-webkit-box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
+
+
 }
 
 .login-form .footer .button:hover {
