--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                   
 			</div>
 			<div class="col-lg-4 col-sm-3">
-				<img class="img-responsive" src="/static/img/Cursos-de-inglés.png" alt="">
+				<img class="img-responsive" src="/static/img/logo/logo-e.png" alt="">
 			</div>
 		</div><!-- row -->
 	</div><!-- container -->
