--- a/templates/login-estudiante.html
+++ b/templates/login-estudiante.html
@@ -4,13 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
-    <title>Login Estudiante</title>
 
+    <title> Login Student </title>
 
-    <link href="static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/style-general.css" rel="stylesheet">
-    <link href="static/css/style-login.css" rel="stylesheet" type="text/css" />
+<!-- Favicon -->
+    <link rel="icon" type="image/png" href="../static/img//favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="../static/img//favicon/favicon-16x16.png" sizes="16x16" />
+<!-- end favicon  -->
+
+    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/style-general.css" rel="stylesheet">
+    <link href="../static/css/style-login.css" rel="stylesheet">
+    <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
     
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -49,13 +56,13 @@ $(document).ready(function() {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">EASY ENGLISH<i class="fa fa-circle"></i></a>
+          <a class="navbar-brand" href="{% url 'index' %}">  <img src="../static/img/logo/logo-e-font.png" class="img-responsive" alt="" width="50%" /> </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{% url 'index' %}">INICIO</a></li>
-            <li><a href="{% url 'curso' %}">INSTITUCIÓN</a></li>
-            <li><a href="#">CONTACTO</a></li>
+            <li class="active"><a href="{% url 'index' %}">HOME</a></li>
+            <li><a href="{% url 'curso' %}">INSTITUTION</a></li>
+            <li><a href="{% url 'contacto' %}"><i class="fa fa-envelope-o"></i> CONTACT</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -76,8 +83,8 @@ $(document).ready(function() {
 
 	<!--HEADER-->
     <div class="header">
-    <!--TITLE--><h1>Estudiantes</h1><!--END TITLE-->
-    <!--DESCRIPTION--><span>Porfavor digite su usuario y contraseña.</span><!--END DESCRIPTION-->
+    <!--TITLE--><h1>Students</h1><!--END TITLE-->
+    <!--DESCRIPTION--><span>Please, enter your username and password.</span><!--END DESCRIPTION-->
     </div>
     <!--END HEADER-->
 	
@@ -93,7 +100,7 @@ $(document).ready(function() {
     <!--FOOTER-->
     <div class="footer">
     <!--LOGIN BUTTON--><input type="submit" name="submit" value="Login" class="button" /><!--END LOGIN BUTTON-->
-    <span class="centered">¿ Olvido su contraseña ? <br /> Entre <a href="#">aquí</a></span>
+    <span class="centered">¿ Forgot your password ? <br /> <a href="#">Click here</a></span>
     </div>
     <!--END FOOTER-->
 
@@ -113,16 +120,7 @@ $(document).ready(function() {
 Para mayor información comuniquese al: (1) 000 29 00
                 </p></div>
                 <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-            </form>
-        </div>        
-     
+                 <div class="centered"> <img src="../static/img/Escudo.png" class="img-responsive" alt=""/></div> </div>
                     </div>
                 </div>
 			</div><!-- row -->
@@ -132,15 +130,15 @@ Para mayor información comuniquese al: (1) 000 29 00
 			<div class="container">
 				<div class="row downLine">
 					<div class="col-md-6 text-left copy">
-						<p>Copyright &copy; All Rights Reserved.</p>
+						<p>Copyright &copy; Escuela Normal Superior María Auxiliadora of Girardot.</p>
 					</div>
 					<div class="col-md-6 text-right dm">
                         
 						<ul id="downMenu">
                             
-							<li class="active"><a href="{% url 'index' %}">Inicio</a></li>
-							<li><a href="{% url 'curso' %}">Institución</a></li>
-							<li><a href="{% url 'contacto' %}">Contacto</a></li>
+							<li class="active"><a href="{% url 'index' %}">Home</a></li>
+                            <li><a href="{% url 'curso' %}">Institution</a></li>
+                            <li><a href="{% url 'contacto' %}">Contact</a></li>
 						</ul>
 					</div>
 				</div>
